[gd_scene load_steps=4 format=3 uid="uid://dxr7t2nhkrl1h"]

[ext_resource type="Script" path="res://src/GameView.gd" id="1_kn52i"]
[ext_resource type="PackedScene" uid="uid://72yjanap81g3" path="res://scenes/InventoryPopup.tscn" id="2_w4ts6"]
[ext_resource type="PackedScene" uid="uid://dllv1b73bbwar" path="res://scenes/MapPopup.tscn" id="3_t66ts"]

[node name="GameView" type="CanvasLayer"]
script = ExtResource("1_kn52i")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 76.0
offset_top = 15.0
offset_right = 1076.0
offset_bottom = 635.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2

[node name="StoryText" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 450)
layout_mode = 2

[node name="ChoiceBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InventoryPopup" parent="." instance=ExtResource("2_w4ts6")]

[node name="MapPopup" parent="." instance=ExtResource("3_t66ts")]

[node name="PauseMenu" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="PauseMenu"]
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/Panel"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 0
offset_left = 76.0
offset_right = 1076.0
offset_bottom = 648.0
theme_override_constants/separation = 20

[node name="Node2" type="Label" parent="PauseMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Paused" type="Label" parent="PauseMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Node" type="Label" parent="PauseMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="Resume" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="MainMenu" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Quit" type="Button" parent="PauseMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
